Added "bit" library